# libportal

./: meson_options.txt
libportal/: account.c  docs.c  meson.build  portal-enums.c.template  portal-gtk.c  portal-gtk.h  portal-helpers.h  remote.h
portal-test/: meson.build
